--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <artifactId>offheap_test</artifactId>
 
     <modelVersion>4.0.0</modelVersion>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <name>Ignite OffHeap Test</name>
     <version>1.0.0</version>
